test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_compound_assign_to_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(ptr)
  =
  &
  identifier(x)
  ;
  identifier(ptr)
  &=
  const int(0)
  ;
  return
  const int(0)
  ;
  }
